--- a/Education.html
+++ b/Education.html
@@ -67,7 +67,9 @@
                                                         <!-- <span class="icon featured fa-comments"></span> -->
                                                         <h3>Languges</h3>
                                                         <ul>	<strong>								
-                                                            <li>Java</li>									
+                                                            <li>Java</li>
+								<li>C++</li>
+								<li>GoLang</li>
                                                             <li>PHP</li>									
                                                             <li>CSS</li>
                                                             <li>HTML5</li>
