--- a/Education.html
+++ b/Education.html
@@ -127,6 +127,7 @@
                                                             <li>MongoDB</li>
                                                             <li>Mongoose</li>
                                                             <li>SQL</li>
+								<li>MySQL</li>
                                                             <li>IBM Watson</li></strong>
                                                         </ul>
                                                         
