--- a/Education.html
+++ b/Education.html
@@ -221,7 +221,7 @@
                                                     <li><strong>Basics of C++</strong> (approximately 18hrs of coursework)</li>
 							<li><strong> GoSkills & HubSpot Academy Excel for Marketers Course</strong> (short course)</li>
 							<li><strong> Golang course</strong> (short course)</li>
-							<li><strong> Introduction to Cybersecurity </strong> (short course)</li>
+							<li><strong> CISCO Introduction to Cybersecurity </strong> (short course)</li>
 							<li><strong> CCNU International AI in education summer course </strong> (3 weeks)</li>
                                                     <li><strong>Bachelor of Computer Science</strong> (approximately 3 years of coursework currently in 2nd year)</li>
                                                     </ul>
