--- a/Education.html
+++ b/Education.html
@@ -148,6 +148,7 @@
                                                             &bull;CodePen
                                                             &bull;Repl.it
                                                             &bull;Glitch
+								&bull;Android Studio
                                                         
                                                         
                                                         </strong>
