--- a/Education.html
+++ b/Education.html
@@ -147,7 +147,7 @@
                                                             &bull;Visual Studio Code
                                                             &bull;CodePen
                                                             &bull;Repl.it
-                                                            &bull;Glitch
+                                                            &bull;Glitch <br/>
 								&bull;Android Studio
                                                         
                                                         
