--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 								<a href="mailto:jameswatson98@hotmail.com" target="_blank"  class="icon solid fas fa-envelope"></i><span class="label">Email</span></a>
 								<a href="tel:0480 260 682" target="_blank"  class="icon solid fas fa-phone"><span class="label">Phone</span></a>
 
-								<a href="images/CV2.pdf" target="_blank" title="CV" class="icon  fa-file"><span class="label">CV</span></a>
+								<a href="images/Resume.pdf" target="_blank" title="CV" class="icon  fa-file"><span class="label">CV</span></a>
 								<a href="https://github.com/JamesWaton" target="_blank"  title="GitHub"  class="icon brands fa-github"><span class="label">Github</span></a>
 								<a href="https://www.linkedin.com/in/james-watson-245515183" target="_blank"  title="linkedIn"  class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a>
 								<a href="https://www.freecodecamp.org/fcc115dbd37-fc57-4c9b-96fd-3505694cd2e5" target="_blank"  title="Free Code Camp"  class="icon brands fab fa-free-code-camp"><span class="label">FreeCodeCamp</span></a>
