--- a/index.html
+++ b/index.html
@@ -542,7 +542,7 @@
         <section id="footer">
             <div class="inner">
                 <h2 class="major">Get in touch</h2>
-                <p>Please free to contact though email or mobile.</p>
+                <p>Please feel free to contact me through email or mobile.</p>
                              <!-- <form method="post" action="#">
                     <div class="fields">
                         <div class="field">
