--- a/Education.html
+++ b/Education.html
@@ -224,6 +224,7 @@
 							<li><strong> Golang course</strong> (short course)</li>
 							<li><strong> CISCO Introduction to Cybersecurity </strong> (short course)</li>
 							<li><strong> CCNU International AI in education summer course </strong> (3 weeks)</li>
+							<li><strong> Software Engineer intern at Strong Compute </strong> ( 2 months)</li>
                                                     <li><strong>Bachelor of Computer Science</strong> (approximately 3 years of coursework currently in 2nd year)</li>
                                                     </ul>
                                             </section>
