--- a/Education.html
+++ b/Education.html
@@ -69,6 +69,7 @@
                                                         <h3>Languges</h3>
                                                         <ul>	<strong>								
                                                             <li>Java</li>
+								<li>Elixir</li>
 								<li>C++</li>
 								<li>GoLang</li>
                                                             <li>PHP</li>									
@@ -86,6 +87,7 @@
                                                         <ul>	<strong>						
                                                             <li>Sass</li>
                                                             <li>React</li>
+							    <li>Phoenix LiveView </li>
                                                             <li>Redux</li>
                                                             <li>jQuery</li>
                                                             <li>Bootstrap</li>
