Update CV and add Laravel project

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 								<a href="mailto:jameswatson98@hotmail.com" target="_blank"  class="icon solid fas fa-envelope"></i><span class="label">Email</span></a>
 								<a href="tel:0480 260 682" target="_blank"  class="icon solid fas fa-phone"><span class="label">Phone</span></a>
 
-								<a href="images/Resume.pdf" target="_blank" title="CV" class="icon  fa-file"><span class="label">CV</span></a>
+								<a href="images/CV.pdf" target="_blank" title="CV" class="icon  fa-file"><span class="label">CV</span></a>
 								<a href="https://github.com/JamesWaton" target="_blank"  title="GitHub"  class="icon brands fa-github"><span class="label">Github</span></a>
 								<a href="https://www.linkedin.com/in/james-watson-245515183" target="_blank"  title="linkedIn"  class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a>
 								<a href="https://www.freecodecamp.org/fcc115dbd37-fc57-4c9b-96fd-3505694cd2e5" target="_blank"  title="Free Code Camp"  class="icon brands fab fa-free-code-camp"><span class="label">FreeCodeCamp</span></a>
@@ -103,7 +103,7 @@
 						<!-- One -->
 							<section id="one" class="wrapper spotlight style1">
 								<div class="inner">
-									<a href="#" class="image"><img src="images/mee2.jpg" alt="" width='115' height='230'/></a>
+									<a href="#" class="image"><img src="images/NCP2.jpg" alt="" width='115' height='230'/></a>
 									<div class="content">
 										<h2 class="major">About me</h2>
 										<p>I'm an eager self taught Junior Full Stack Developer who is full of life and looking to kickstart my developer Career.</p>
@@ -625,6 +625,15 @@
            <h6>Chess</h6>
 
             <p>JAVA</p>
+
+    </article>
+    </div>
+    <!-- Laravel   -->
+    <div class="carousel-cell">
+    <article>
+       <a href="#" class="image featured"><img src="images/Tradies.png" alt="" width='213em' height='200em'/></a>
+           <h6>Tradespeople hiring site</h6>
+            <p>PHP, Larvel, XAMPP, Composer, Seeder, PHP Faker</p>
 
 
     </article>
