--- a/index.html
+++ b/index.html
@@ -633,7 +633,7 @@
     <article>
        <a href="#" class="image featured"><img src="images/Tradies.png" alt="" width='213em' height='200em'/></a>
            <h6>Tradespeople hiring site</h6>
-            <p>PHP, Larvel, XAMPP, Composer, Seeder, PHP Faker</p>
+            <p>PHP, Laravel, XAMPP, Composer, Seeder, PHP Faker</p>
 
 
     </article>
